# freivalds-pol

./: .coverage  .gitignore  CHANGES.md  CITATION.cff  Makefile  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
experiments/: adaptive.py  backdoor.py  backdoor_capacity.py  compressed.py  curvature_attack.py  figures.py  fp_crux.py  grinding.py  multiround.py  real_step.py  run_detection.py  scale.py  zk_matmul.py
src/freivalds_pol/: __init__.py  adaptive.py  adversary.py  challenge.py  collusion.py  commitments.py  compressor.py  curvature.py  demo.py  freivalds.py  model.py  numerics.py  trainer.py  training.py  transcript.py  transformer.py  verifier.py  zk.py
tests/: test_adaptive.py  test_backdoor.py  test_collusion.py  test_commitments.py  test_compressor.py  test_curvature.py  test_demo.py  test_freivalds.py  test_model.py  test_numerics.py  test_trainer.py  test_training.py  test_transformer.py  test_verifier.py  test_zk.py
